--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@types/chai": "^4.2.4",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.5",
+    "@types/readline-sync": "^1.4.3",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.4"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
