--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.5",
     "@types/readline-sync": "^1.4.3",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "chai": "^4.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "ts-node": "^8.4.1",
